<resources>
    <string name="app_name">uidReader</string>
    <string name="pl.com.edps.basmoc.button.getGPSco">Get GPS co</string>
    <string name="pl.com.edps.basmoc.button.getNFCuid">Get NFC UID</string>
    <string name="pl.com.edps.basmoc.button.getPhoto">Get photo</string>
    <string name="pl.com.edps.basmoc.info.points">...</string>
    <string name="pl.com.edps.basmoc.info.waitingForInput">Waiting for input...</string>
    <string name="pl.com.edps.basmoc.info.waitingForData">Waiting for data...</string>
    <string name="pl.com.edps.basmoc.info.noGPSpriv">GPS: permission denied!</string>
    <string name="pl.com.edps.basmoc.info.noNFCpriv">NFC: permission denied!</string>
    <string name="pl.com.edps.basmoc.info.noCAMpriv">Camera: permission denied!</string>
    <string name="pl.com.edps.basmoc.butt.openUART">Open UART</string>
    <string name="quick_photo">Quick photo</string>
    <string name="quick_shot">Quick shot</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint__confirm_password">Confirm Password</string>
    <string name="label_login_btn">Login</string>
    <string name="label_signup_btn">SignUp</string>
    <string name="label_create_user_btn">Create User</string>
</resources>
