<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username" />

    <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

    <EditText
            android:id="@+id/ed_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint__confirm_password"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/btn_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_create_user_btn" />

</LinearLayout>
